<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#535250"

    tools:context=".Years" >

    <Button
        android:id="@+id/year1_button"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/button_year1"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:background="@drawable/mainselect"
        android:layout_marginBottom="2dp"
		android:layout_marginTop="2dp"
		/>
	<Button
        android:id="@+id/year2_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/button_year2"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:background="@drawable/mainselect"
        android:layout_marginBottom="2dp" 
        />
	
	<Button
        android:id="@+id/year3_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/button_year3"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:background="@drawable/mainselect"
        android:layout_marginBottom="2dp"  />
	<Button
	    android:id="@+id/year4_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/button_year4"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:background="@drawable/mainselect"
        android:layout_marginBottom="2dp"   />
	<Button
	    android:id="@+id/msc_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/button_MSc"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:background="@drawable/mainselect"
        android:layout_marginBottom="2dp"   />
</LinearLayout>
