<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" 
    android:orientation="vertical"
    android:background="@drawable/charback"
    android:padding = "5dp">
    
    <View
    android:layout_width="fill_parent"
    android:layout_height="1dip"
    android:background="#FF0000FF"
	/>
    
   <Button
        android:id="@+id/browseAll"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:background="@drawable/mainselect"
        android:text="@string/button_browseAll"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/browseYear"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/browseAll"
        android:layout_below="@+id/browseAll"
        android:layout_marginTop="122dp"
        android:background="@drawable/mainselect"
        android:text="@string/button_browseYear"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/edLogo1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:src="@drawable/edlogo" 
        android:contentDescription="@string/edlogo"/>

    <Button
        android:id="@+id/browseSemester"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/browseYear"
        android:layout_below="@+id/browseAll"
        android:layout_marginTop="38dp"
        android:background="@drawable/mainselect"
        android:text="@string/button_browseSemester"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:textStyle="italic"
        android:text="@string/developer" />
  
</RelativeLayout>
